<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoSilencer</string>
    
    <string name="currentState">Current State:</string>
	<string name="nextEvent">Next Event:</string>
	<string name="viewUpEvents">View Upcoming Events</string>
	<string name="addCalendarEvent">Add Calendar Event</string>
	<string name="settings">Settings</string>
	<string name="mainMenuTitle">AutoSilencer</string>
	<string name="vibrate">Vibrate</string>
	<string name="silent">Silent</string>
	<string name="normal">Normal</string>
	
	<string name="developersLabel">Developers</string>
	<string name="developers">Andrew Davis and Taylor Reeves</string>
	
	<string name="rolesLabel">Roles</string>
	<string name="andyRoles">
	    Andrew Davis was responsible for implementing the calendar functionality. This includes polling the calendar at regular intervals and checking for when the phone needs to change state. He was also in charge of hooking up the preferences to the application, allowing the user to keep their settings from a previous launch.
	</string>
	
	<string name="taylorRoles">
	    Taylor Reeves was responsible the layout and application design, this includes the preferences menu. He actively researched different possibilities for giving the user the most customization. Taylor also assisted with development of changing the phone\'s volume state.
	</string>
	
	<string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="confirm_exit">Are you sure you want to exit AutoSilencer?</string>
    <string name="confirm_title">Exit Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
	
	<string-array name="pollingTimesArray">
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>3 Hours</item>
    </string-array>
    
	<string-array name="eventVolume">
        <item>Low Volume</item>
        <item>Vibrate</item>
        <item>Silent</item>
    </string-array>

</resources>