<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <LinearLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
        
        <TextView
        	android:id="@+id/textViewAboutContent"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/developersLabel"
	        android:textSize="25sp" android:singleLine="false"/>
	    
	    <TextView
	        android:id="@+id/textViewAboutContent"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/developers"
	        android:textSize="15sp"
	        android:paddingBottom="15dp" />
    
	    <TextView
        	android:id="@+id/textViewAboutContent"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/rolesLabel"
	        android:textSize="25sp" android:singleLine="false"/>
	    
	    <TextView
	        android:id="@+id/textViewAboutContent"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/andyRoles"
	        android:textSize="15sp"
	        android:paddingBottom="10dp" />
	    
	    <TextView
	        android:id="@+id/textViewAboutContent"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/taylorRoles"
	        android:textSize="15sp"
	        android:paddingBottom="5dp" />
        
    </LinearLayout>
    
</ScrollView>